<?xml version="1.0"?>
<package format="3">
  <name>trajectory_control</name>
  <version>0.1.0</version>
  <description>PX4 trajectory control with ENU/NED conversion for ego-planner integration</description>
  <maintainer email="zhaoli.go@gmail.com">li</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>traj_utils</depend>
  <depend>bspline_opt</depend>
  <depend>nav_msgs</depend>
  <depend>eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
